Fisrt Layout Inicial

--- a/HackQuestion/wwwroot/css/site.css
+++ b/HackQuestion/wwwroot/css/site.css
@@ -1,35 +1,21 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿html {
+    scroll-behavior: smooth;
+  }
+  
+body {
+     /* background-color: rgb(246, 248, 250);   */
+      font-size: 1.2rem !important;
+      font-weight: 300;
+      line-height: 1.52947;
+      letter-spacing: .011em;
+      color: #212529;
+      text-align: left;
+}
+    
+.bg-gray{
+  background-color: rgb(246, 248, 250) !important;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
+.jumbotron{
+    border-radius: 0 !important;
 }
