--- a/HackQuestion/Views/Shared/_Menu.cshtml
+++ b/HackQuestion/Views/Shared/_Menu.cshtml
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 border-bottom px-3">
   <div class="container p-responsive">
-    <a class="navbar-brand font-weight-light" href="#">Hack Question</a>
+    <a class="navbar-brand font-weight-light" href="/">Hack Question</a>
   </div>
 </nav>
 
