--- a/HackQuestion/Views/Shared/_Menu.cshtml
+++ b/HackQuestion/Views/Shared/_Menu.cshtml
@@ -7,6 +7,20 @@
   <div class="container p-responsive">
     <a class="navbar-brand font-weight-light" href="/">Hack Question</a>
   </div>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+              <a class="nav-link"  asp-action="Category" asp-controller="Api">Categorias <span class="sr-only">(current)</span></a>
+          </li>
+          @*<li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+          </li>*@
+      </ul>
+      
+  </div>  
 </nav>
 
  
