--- a/HackQuestion/Views/Shared/_Menu.cshtml
+++ b/HackQuestion/Views/Shared/_Menu.cshtml
@@ -12,6 +12,9 @@
           <li class="nav-item active">
               <a class="nav-link"  asp-action="Category" asp-controller="Api">Categorias <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item active">
+              <a class="nav-link"  asp-action="Question" asp-controller="Api">Question <span class="sr-only">(current)</span></a>
+          </li>
           @*<li class="nav-item">
               <a class="nav-link" href="#">Link</a>
           </li>
