--- a/HackQuestion/Views/Shared/_Layout.cshtml
+++ b/HackQuestion/Views/Shared/_Layout.cshtml
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HackQuestion</title>
+    <title>Hack The Question</title>
     <link rel="stylesheet" href="~/css/reset.css"  />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapiss.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -16,33 +15,14 @@
     @{ await Html.RenderPartialAsync("_Menu"); }
     <div class="container_">
         <main role="main" class="">
-                @RenderBody()
+           @RenderBody()
         </main>
     </div>
-
-
-    
-     <!-- <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script> -->
      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-     <script src="~/js/site.js" asp-append-version="true"></script>
-     
-     <script src="~/js/app/models/Question.js"></script>
-     <script src="~/js/app/services/HttpServices.js"></script>
-     <script src="~/js/app/dao/QuestionDao.js"></script>
-     <script src="~/js/app/services/QuestionServices.js"></script>
-     <script src="~/js/app/views/QuestionView.js"></script>
-     <script src="~/js/app/controllers/QuestionController.js"></script>
-
-     <script>
-        let controller = new QuestionController();
-     </script>
-
-
-
-
+     <script src="~/js/site.min.js" asp-append-version="true"></script>
+     <script>window.controller = new QuestionController();</script>
      @RenderSection("Scripts", required: false)
 </body>
-
 </html>
