--- a/HackQuestion/Views/Shared/_Menu.cshtml
+++ b/HackQuestion/Views/Shared/_Menu.cshtml
@@ -5,9 +5,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 border-bottom px-3">
   <div class="container p-responsive">
-    <a class="navbar-brand font-weight-light" href="/">Hack Question</a>
+    <a class="navbar-brand font-weight-light" href="/">Hack <i style="font-style:italic">The</i> Question</a>
   </div>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
+  <!-- <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
               <a class="nav-link"  asp-action="Category" asp-controller="Api">Categorias <span class="sr-only">(current)</span></a>
@@ -15,15 +15,9 @@
           <li class="nav-item active">
               <a class="nav-link"  asp-action="Question" asp-controller="Api">Question <span class="sr-only">(current)</span></a>
           </li>
-          @*<li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-          </li>*@
       </ul>
       
-  </div>  
+  </div>   -->
 </nav>
 
  
