Add Video Recorder

--- a/HackQuestion/Views/Shared/_Layout.cshtml
+++ b/HackQuestion/Views/Shared/_Layout.cshtml
@@ -35,8 +35,21 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="~/js/site.min.js" asp-append-version="true"></script>
+     <!-- <script src="~/js/site.min.js" asp-append-version="true"></script>    -->
+     <script src="~/js/app/helpers/Arrays.js" asp-append-version="true"></script>   
+     <script src="~/js/app/services/HttpServices.js" asp-append-version="true"></script>   
+     <script src="~/js/app/dao/QuestionDao.js" asp-append-version="true"></script>   
+     <script src="~/js/app/services/QuestionServices.js" asp-append-version="true"></script>   
+
+     <script src="~/js/app/controllers/QuestionController.js" asp-append-version="true"></script>   
+     <script src="~/js/app/views/View.js" asp-append-version="true"></script>   
+     <script src="~/js/app/views/QuestionView.js" asp-append-version="true"></script>   
+
+     <script src="~/js/site.js" asp-append-version="true"></script>   
+
+
+
     <script>let controller = new QuestionController();</script>
     @RenderSection("Scripts", required: false)
 </body>
-</html>
+</html> 
