--- a/HackQuestion/Views/Shared/_Modal.cshtml
+++ b/HackQuestion/Views/Shared/_Modal.cshtml
@@ -20,12 +20,13 @@
                 <select id="categoryId" class="form-control" asp-items="ViewBag.CategoryId"> </select>
             </div>
         </div>
-        <div class="col">
+        <input type="hidden" id="time" value="0">
+        <!-- <div class="col">
            <div class="form-group ">
                 <label for="time">Response at Time:</label>
                 <input type="number" in  class="form-control" id="time" value="0" >
              </div>
-        </div>
+        </div> -->
       </div>
  
             <div class="form-group">
@@ -33,7 +34,7 @@
                  <textarea class="form-control" id="question" required rows="4"></textarea>
             </div>
             <div class="form-group">
-                <label for="answare">Answare</label>
+                <label for="answare">Answear</label>
                 <textarea class="form-control" id="answare" rows="4"></textarea>
             </div>
 
