--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="shortcut icon" href="http://joseluiz.net/assets/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="http://joseluiz.net/assets/img/favicon.ico" type="image/x-icon">
+    <link
+href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet" crossorigin> 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115448344-2"></script>
     <script>
