--- a/src/Views/Shared/_Menu.cshtml
+++ b/src/Views/Shared/_Menu.cshtml
@@ -3,9 +3,11 @@
   src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub">
 </a>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white py-4 border-bottom px-3">
+<nav class="navbar navbar-expand-lg navbar-light py-4 px-3 bg-blue">
   <div class="container p-responsive">
-    <a class="navbar-brand font-weight-light" href="/">Hack <i style="font-style:italic">The</i> Question</a>
+    <a class="navbar-brand font-weight-light" href="/">
+    <span class="text-white">Learn from Question</span>
+    </a>
   </div>
   <!-- <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
