--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -1,21 +1,31 @@
 ﻿html {
-    scroll-behavior: smooth;
-  }
-  
-body {
-     /* background-color: rgb(246, 248, 250);   */
-      font-size: 1.2rem !important;
-      font-weight: 300;
-      line-height: 1.52947;
-      letter-spacing: .011em;
-      color: #212529;
-      text-align: left;
+  scroll-behavior: smooth;
 }
-    
-.bg-gray{
+
+body {
+  /* background-color: rgb(246, 248, 250);   */
+  font-size: 1.2rem !important;
+  font-weight: 300;
+  line-height: 1.52947;
+  letter-spacing: 0.011em;
+  color: #212529;
+  text-align: left;
+
+  font-family: 'Open Sans', sans-serif;
+}
+
+.bg-gray {
   background-color: rgb(246, 248, 250) !important;
 }
 
-.jumbotron{
-    border-radius: 0 !important;
+.jumbotron {
+  border-radius: 0 !important;
+}
+
+.bg-blue {
+  background-color: #2a7ae4;
+}
+
+.jumbotron {
+  margin-bottom: 0 !important;
 }
