--- a/src/Views/Shared/_Record.cshtml
+++ b/src/Views/Shared/_Record.cshtml
@@ -9,7 +9,7 @@
                 </button>
             </div> 
             <div class="modal-body">
-                <video id="my-preview" controls autoplay style="width:460px; height:300px;"> </video>
+                <video id="video" controls autoplay style="width:460px; height:300px;"> </video>
             </div>
             <div class="modal-footer">
                 <button id="btn-start-recording" class="btn btn-info">Start Recording</button>
